# wingz-backend-test

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.local.yml  manage.py  pyproject.toml
.envs/.local/: .postgres
compose/local/django/: Dockerfile
compose/local/postgres/: Dockerfile
config/: api_router.py  urls.py  wsgi.py
config/settings/: base.py  local.py  test.py
locale/: README.md
locale/en_US/LC_MESSAGES/: django.po
locale/fr_FR/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
requirements/: base.txt  local.txt
wingz_backend/: conftest.py
wingz_backend/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
wingz_backend/rides/: admin.py  apps.py  models.py  services.py
wingz_backend/rides/api/: errors.py  serializers.py  views.py
wingz_backend/rides/migrations/: 0001_initial.py  0002_alter_ride_dropoff_address_and_more.py  0003_add_ride_sorting_indexes.py  0004_rideevent.py
wingz_backend/rides/tests/: factories.py  test_models.py
wingz_backend/rides/tests/api/: test_serializers.py  test_urls.py  test_views.py
wingz_backend/templates/: base.html
wingz_backend/users/: adapters.py  admin.py  apps.py  models.py  views.py
wingz_backend/users/api/: serializers.py  views.py
wingz_backend/users/migrations/: 0001_initial.py  0002_user_phone_number_user_role.py
wingz_backend/users/tests/: factories.py  test_admin.py  test_forms.py  test_managers.py  test_models.py  test_urls.py  test_views.py
wingz_backend/users/tests/api/: test_openapi.py  test_urls.py  test_views.py
